; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/binutils/bfd/extr_binary.c_mangle_name.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/binutils/bfd/extr_binary.c_mangle_name.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [1 x i8] zeroinitializer, align 1
@.str.1 = private unnamed_addr constant [14 x i8] c"_binary_%s_%s\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i32*, i8*)* @mangle_name to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @mangle_name(i32* %0, i8* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  store i32* %0, i32** %4, align 8
  store i8* %1, i8** %5, align 8
  %9 = load i32*, i32** %4, align 8
  %10 = call i8* @bfd_get_filename(i32* %9)
  %11 = call i32 @strlen(i8* %10)
  %12 = load i8*, i8** %5, align 8
  %13 = call i32 @strlen(i8* %12)
  %14 = add nsw i32 %11, %13
  %15 = sext i32 %14 to i64
  %16 = add i64 %15, 10
  %17 = trunc i64 %16 to i32
  store i32 %17, i32* %6, align 4
  %18 = load i32*, i32** %4, align 8
  %19 = load i32, i32* %6, align 4
  %20 = call i8* @bfd_alloc(i32* %18, i32 %19)
  store i8* %20, i8** %7, align 8
  %21 = load i8*, i8** %7, align 8
  %22 = icmp eq i8* %21, null
  br i1 %22, label %23, label %24

23:                                               ; preds = %2
  store i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str, i64 0, i64 0), i8** %3, align 8
  br label %48

24:                                               ; preds = %2
  %25 = load i8*, i8** %7, align 8
  %26 = load i32*, i32** %4, align 8
  %27 = call i8* @bfd_get_filename(i32* %26)
  %28 = load i8*, i8** %5, align 8
  %29 = call i32 @sprintf(i8* %25, i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.1, i64 0, i64 0), i8* %27, i8* %28)
  %30 = load i8*, i8** %7, align 8
  store i8* %30, i8** %8, align 8
  br label %31

31:                                               ; preds = %43, %24
  %32 = load i8*, i8** %8, align 8
  %33 = load i8, i8* %32, align 1
  %34 = icmp ne i8 %33, 0
  br i1 %34, label %35, label %46

35:                                               ; preds = %31
  %36 = load i8*, i8** %8, align 8
  %37 = load i8, i8* %36, align 1
  %38 = call i32 @ISALNUM(i8 signext %37)
  %39 = icmp ne i32 %38, 0
  br i1 %39, label %42, label %40

40:                                               ; preds = %35
  %41 = load i8*, i8** %8, align 8
  store i8 95, i8* %41, align 1
  br label %42

42:                                               ; preds = %40, %35
  br label %43

43:                                               ; preds = %42
  %44 = load i8*, i8** %8, align 8
  %45 = getelementptr inbounds i8, i8* %44, i32 1
  store i8* %45, i8** %8, align 8
  br label %31

46:                                               ; preds = %31
  %47 = load i8*, i8** %7, align 8
  store i8* %47, i8** %3, align 8
  br label %48

48:                                               ; preds = %46, %23
  %49 = load i8*, i8** %3, align 8
  ret i8* %49
}

declare dso_local i32 @strlen(i8*) #1

declare dso_local i8* @bfd_get_filename(i32*) #1

declare dso_local i8* @bfd_alloc(i32*, i32) #1

declare dso_local i32 @sprintf(i8*, i8*, i8*, i8*) #1

declare dso_local i32 @ISALNUM(i8 signext) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
